--- a/index.html
+++ b/index.html
@@ -49,42 +49,42 @@
                 <div class="carousel-inner ">
                   <div class="carousel-item  active">
                     <div class="row header-bg-color p-5 d-flex align-items-center">
-                        <div class="col-7 ">
+                        <div class="col-lg-7 col-md-7 col-12 ">
                             <h1>Cool Dude Headphone</h1>
                             <p class="p-2">This is the best headphone in the world for people who just want to waste time in front of funky world.
                             </p>
                             <h1>$420</h1>
                             <button type="button" class="header-btns">Buy Now</button>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-md-5 col-12">
                             <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                   </div>
                   <div class="carousel-item ">
                     <div class="row header-bg-color p-5 d-flex align-items-center">
-                        <div class="col-7 ">
+                        <div class="col-lg-7 col-md-7 col-12">
                             <h1>Cool Dude Headphone</h1>
                             <p class="p-2">This is the best headphone in the world for people who just want to waste time in front of funky world.
                             </p>
                             <h1>$420</h1>
                             <button type="button" class="header-btns">Buy Now</button>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-md-5 col-12">
                             <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
                   </div>
                   <div class="carousel-item ">
                     <div class="row header-bg-color p-5 d-flex align-items-center">
-                        <div class="col-7 ">
+                        <div class="col-lg-7 col-md-7 col-12">
                             <h1>Cool Dude Headphone</h1>
                             <p class="p-2">This is the best headphone in the world for people who just want to waste time in front of funky world.
                             </p>
                             <h1>$420</h1>
                             <button type="button" class="header-btns">Buy Now</button>
                         </div>
-                        <div class="col-5">
+                        <div class="col-lg-5 col-md-5 col-12">
                             <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
                         </div>
                     </div>
@@ -106,21 +106,26 @@
     <main>
         <section class="container my-5">
            <h1>Categories</h1>
-                <div class="d-flex my-5">
-                    <div class=" watch d-flex justify-content-between align-items-center">
-                        <h1>Watch</h1>
-                        <img src="images/categories/watch.png" alt="" width="100px" height="100px">
+                 <div class="row row-cols-1 row-cols-md-3 g-4">
+                    <div class="col">
+                      <div class=" watch d-flex justify-content-between align-items-center">
+                            <h1>Watch</h1>
+                            <img src="images/categories/watch.png" alt="" width="100px" height="100px">
+                        </div>
                     </div>
-                    <div class="bag d-flex justify-content-between align-items-center">
-                        <h1>Bag</h1>
-                        <img src="images/categories/bag.png" alt="" width="100px" height="100px">
+                    <div class="col">
+                        <div class="bag d-flex justify-content-between align-items-center">
+                            <h1>Bag</h1>
+                            <img src="images/categories/bag.png" alt="" width="100px" height="100px">
+                        </div>
                     </div>
-                    <div class=" shoe d-flex justify-content-between align-items-center">
-                        <h1>shoes</h1>
-                        <img src="images/categories/shoes.png" alt=""width="100px" height="100px">
+                    <div class="col">
+                        <div class=" shoe d-flex justify-content-between align-items-center">
+                            <h1>shoes</h1>
+                            <img src="images/categories/shoes.png" alt=""width="100px" height="100px">
+                        </div>
                     </div>
-                </div>
-            
+                  </div>
         </section>
 
 <!-- ---------------------
@@ -130,47 +135,109 @@
             <h1>Shoes</h1>
             <div class="row row-cols-1 row-cols-md-3 g-4">
                 <div class="col">
-                  <div class="card h-100">
+                  <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Supply 350</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                       <h5>$120</h5>
                     </div>
-                    <div class="card-footer-design">
-                      <a href="" class="oi">Buy Now</a>
-                    </div>
+                    <div>
+                        <button>Buy Now</button>
+                      </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
+                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                      <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h5>$120</h5>
+                      </div>
+                      <div>
+                        <button>Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col">
+                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                      <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Supply 350</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h5>$120</h5>
+                      </div>
+                      <div>
+                        <button>Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
+              </div>
+        </section>
+<!-- ---------------------
+    Backpack
+    --------------------- -->
+        <section class="container my-5">
+            <h3>Backpack</h3>
+            <div class="row row-cols-1 row-cols-md-3 g-4">
+                <div class="col">
+                  <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                    <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
+                      <h5 class="card-title">Red Laltu Bag</h5>
+                      <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                      <h5>$120</h5>
                     </div>
-                    <div class="card-footer">
-                      <small class="text-muted">Last updated 3 mins ago</small>
-                    </div>
+                    <div class="">
+                        <button>Buy Now</button>
+                      </div>
                   </div>
                 </div>
                 <div class="col">
-                  <div class="card h-100">
-                    <img src="..." class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This card has even longer content than the first to show that equal height action.</p>
-                    </div>
-                    <div class="card-footer">
-                      <small class="text-muted">Last updated 3 mins ago</small>
+                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                      <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Blue Niltu Bag</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h5>$120</h5>
+                      </div>
+                      <div>
+                        <button>Buy Now</button>
+                      </div>
                     </div>
                   </div>
-                </div>
+                  <div class="col">
+                    <div class="card shadow p-3 mb-5 bg-body rounded h-100">
+                      <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                      <div class="card-body">
+                        <h5 class="card-title">Black Kaltu Bag</h5>
+                        <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
+                        <h5>$120</h5>
+                      </div>
+                      <div>
+                        <button>Buy Now</button>
+                      </div>
+                    </div>
+                  </div>
               </div>
         </section>
 
+<!-- ------------LET'S STAY IN TOUCH------------- -->
 
+        <section class="container d-flex justify-content-center align-items-center" style="height: 300px;  background-color: #fceae8;">
+            <div>
+                <h3>LET'S STAY IN TOUCH</h3>
+                <p>Get updates on sales, specials and more</p>
+                <input class="form-control" type="text" value="input here..." aria-label="readonly input example" readonly>
+                <button class="my-2">SUBMIT</button>
+            </div>
+        </section>
     </main>
+
+    <footer>
+        <p class="text-center mt-5"><small>©2020. Panda Commerce. All rights reserved. Ashik</small></p>
+    </footer>
 
     <!-- js script -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
