--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
             <div>
                 <h3>LET'S STAY IN TOUCH</h3>
                 <p>Get updates on sales, specials and more</p>
-                <input class="form-control" type="text" value="input here..." aria-label="readonly input example" readonly>
+                <input class="form-control" type="text"  aria-label="readonly input example" placeholder="write here...">
                 <button class="my-2">SUBMIT</button>
             </div>
         </section>
