--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                             <h1>Cool Dude Headphone</h1>
                             <p class="p-2">This is the best headphone in the world for people who just want to waste time in front of funky world.
                             </p>
-                            <h1>$420</h1>
+                            <h1 class="price">$420</h1>
                             <button type="button" class="header-btns">Buy Now</button>
                         </div>
                         <div class="col-lg-5 col-md-5 col-12">
@@ -64,10 +64,10 @@
                   <div class="carousel-item ">
                     <div class="row header-bg-color p-5 d-flex align-items-center">
                         <div class="col-lg-7 col-md-7 col-12">
-                            <h1>Cool Dude Headphone</h1>
-                            <p class="p-2">This is the best headphone in the world for people who just want to waste time in front of funky world.
+                            <h1>Mi LED TV 4A PRO 32</h1>
+                            <p class="p-2">This is the best tv in the world for people who just want to waste time in front of tv.
                             </p>
-                            <h1>$420</h1>
+                            <h1 class="price">$800</h1>
                             <button type="button" class="header-btns">Buy Now</button>
                         </div>
                         <div class="col-lg-5 col-md-5 col-12">
@@ -78,10 +78,10 @@
                   <div class="carousel-item ">
                     <div class="row header-bg-color p-5 d-flex align-items-center">
                         <div class="col-lg-7 col-md-7 col-12">
-                            <h1>Cool Dude Headphone</h1>
-                            <p class="p-2">This is the best headphone in the world for people who just want to waste time in front of funky world.
+                            <h1>X-Box for your living room</h1>
+                            <p class="p-2">This is the best x-box in the world for people who just want to waste time in front of fake sports.
                             </p>
-                            <h1>$420</h1>
+                            <h1 class="price">$600</h1>
                             <button type="button" class="header-btns">Buy Now</button>
                         </div>
                         <div class="col-lg-5 col-md-5 col-12">
@@ -102,7 +102,7 @@
               </div>
           </section>
     </header>
-
+<!-- ----------------------header-end------------------ -->
     <main>
         <section class="container my-5">
            <h1>Categories</h1>
@@ -138,7 +138,7 @@
                   <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <h5 class="card-title">Supply 350</h5>
+                      <h5 class="card-title">Reebok Dart Men’s Shoes</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                       <h5>$120</h5>
                     </div>
@@ -151,7 +151,7 @@
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                       <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
+                        <h5 class="card-title">Reebok Pump</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                         <h5>$120</h5>
                       </div>
@@ -164,7 +164,7 @@
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                       <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
                       <div class="card-body">
-                        <h5 class="card-title">Supply 350</h5>
+                        <h5 class="card-title">Reebok All Terrain</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                         <h5>$120</h5>
                       </div>
