--- a/index.html
+++ b/index.html
@@ -104,9 +104,14 @@
     </header>
 <!-- ----------------------header-end------------------ -->
     <main>
+
+<!-- --------------------
+Categories
+--------------------------- -->
+    
         <section class="container my-5">
-           <h1>Categories</h1>
-                 <div class="row row-cols-1 row-cols-md-3 g-4">
+           <h3>Categories</h3>
+                 <div class="row row-cols-1 row-cols-md-3 my-5">
                     <div class="col">
                       <div class=" watch d-flex justify-content-between align-items-center">
                             <h1>Watch</h1>
@@ -132,8 +137,8 @@
     shoes
     --------------------- -->
         <section class="container">
-            <h1>Shoes</h1>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <h3>Shoes</h3>
+            <div class="row row-cols-1 row-cols-md-3 my-5">
                 <div class="col">
                   <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
@@ -180,42 +185,46 @@
     --------------------- -->
         <section class="container my-5">
             <h3>Backpack</h3>
-            <div class="row row-cols-1 row-cols-md-3 g-4">
+            <div class="row row-cols-1 row-cols-md-3 my-5">
+               <!-- ---------------Red Laltu Bag---------------  -->
                 <div class="col">
                   <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
+                    <div class="card-body text-center">
                       <h5 class="card-title">Red Laltu Bag</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                       <h5>$120</h5>
                     </div>
-                    <div class="">
+                    <div class="text-center">
                         <button>Buy Now</button>
                       </div>
                   </div>
                 </div>
+            <!-- ----------Blue Niltu Bag---------     -->
                 <div class="col">
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                       <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                         <h5 class="card-title">Blue Niltu Bag</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                         <h5>$120</h5>
                       </div>
-                      <div>
+                      <div class="text-center">
                         <button>Buy Now</button>
                       </div>
                     </div>
                   </div>
+
+              <!-- ------------ Black Kaltu Bag--------  -->
                   <div class="col">
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                       <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
-                      <div class="card-body">
+                      <div class="card-body text-center">
                         <h5 class="card-title">Black Kaltu Bag</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
                         <h5>$120</h5>
                       </div>
-                      <div>
+                      <div class="text-center">
                         <button>Buy Now</button>
                       </div>
                     </div>
