--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container">
               <a class="navbar-brand" href="#">
                   <img src="images/logo.png" alt="">
@@ -28,13 +28,13 @@
                     <a class="nav-link active" aria-current="page" href="#">Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Shoes</a>
+                    <a class="nav-link" href="#shoe">Shoes</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Backpack</a>
+                    <a class="nav-link" href="#backpack">Backpack</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Subscribe</a>
+                    <a class="nav-link" href="#subscribe">Subscribe</a>
                   </li>
                  
                 </ul>
@@ -136,8 +136,8 @@ Categories
 <!-- ---------------------
     shoes
     --------------------- -->
-        <section class="container">
-            <h3>Shoes</h3>
+        <section id="shoe" class="container">
+            <h3 >Shoes</h3>
             <div class="row row-cols-1 row-cols-md-3 my-5">
                 <div class="col">
                   <div class="card shadow p-3 mb-5 bg-body rounded h-100">
@@ -183,7 +183,7 @@ Categories
 <!-- ---------------------
     Backpack
     --------------------- -->
-        <section class="container my-5">
+        <section id="backpack" class="container my-5">
             <h3>Backpack</h3>
             <div class="row row-cols-1 row-cols-md-3 my-5">
                <!-- ---------------Red Laltu Bag---------------  -->
@@ -234,7 +234,7 @@ Categories
 
 <!-- ------------LET'S STAY IN TOUCH------------- -->
 
-        <section class="container d-flex justify-content-center align-items-center" style="height: 300px;  background-color: #fceae8;">
+        <section id="subscribe" class="container d-flex justify-content-center align-items-center" style="height: 300px;  background-color: #fceae8;">
             <div>
                 <h3>LET'S STAY IN TOUCH</h3>
                 <p>Get updates on sales, specials and more</p>
