--- a/index.html
+++ b/index.html
@@ -115,19 +115,19 @@ Categories
                     <div class="col">
                       <div class=" watch d-flex justify-content-between align-items-center">
                             <h1>Watch</h1>
-                            <img src="images/categories/watch.png" alt="" width="100px" height="100px">
+                            <img class="pic" src="images/categories/watch.png" alt="" width="100px" height="100px">
                         </div>
                     </div>
                     <div class="col">
                         <div class="bag d-flex justify-content-between align-items-center">
                             <h1>Bag</h1>
-                            <img src="images/categories/bag.png" alt="" width="100px" height="100px">
+                            <img class="pic" src="images/categories/bag.png" alt="" width="100px" height="100px">
                         </div>
                     </div>
                     <div class="col">
                         <div class=" shoe d-flex justify-content-between align-items-center">
                             <h1>shoes</h1>
-                            <img src="images/categories/shoes.png" alt=""width="100px" height="100px">
+                            <img class="pic" src="images/categories/shoes.png" alt=""width="100px" height="100px">
                         </div>
                     </div>
                   </div>
@@ -167,7 +167,7 @@ Categories
                   </div>
                   <div class="col">
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
-                      <img src="images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                      <img src="images/shoes/shoe-3.png" class="card-img-top " alt="...">
                       <div class="card-body">
                         <h5 class="card-title">Reebok All Terrain</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional.</p>
