--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@ Categories
         <section class="container my-5">
            <h3>Categories</h3>
                  <div class="row row-cols-1 row-cols-md-3 my-5">
-                    <div class="col">
+                    <div class="col mb-3">
                       <div class=" watch d-flex justify-content-between align-items-center">
                             <h1>Watch</h1>
                             <img class="pic" src="images/categories/watch.png" alt="" width="100px" height="100px">
                         </div>
                     </div>
-                    <div class="col">
+                    <div class="col mb-3">
                         <div class="bag d-flex justify-content-between align-items-center">
                             <h1>Bag</h1>
                             <img class="pic" src="images/categories/bag.png" alt="" width="100px" height="100px">
@@ -139,7 +139,7 @@ Categories
         <section id="shoe" class="container">
             <h3 >Shoes</h3>
             <div class="row row-cols-1 row-cols-md-3 my-5">
-                <div class="col">
+                <div class="col mb-3">
                   <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                     <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
                     <div class="card-body">
@@ -152,7 +152,7 @@ Categories
                       </div>
                   </div>
                 </div>
-                <div class="col">
+                <div class="col mb-3">
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                       <img src="images/shoes/shoe-2.png" class="card-img-top" alt="...">
                       <div class="card-body">
@@ -187,7 +187,7 @@ Categories
             <h3>Backpack</h3>
             <div class="row row-cols-1 row-cols-md-3 my-5">
                <!-- ---------------Red Laltu Bag---------------  -->
-                <div class="col">
+                <div class="col mb-3">
                   <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                     <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                     <div class="card-body text-center">
@@ -201,7 +201,7 @@ Categories
                   </div>
                 </div>
             <!-- ----------Blue Niltu Bag---------     -->
-                <div class="col">
+                <div class="col mb-3">
                     <div class="card shadow p-3 mb-5 bg-body rounded h-100">
                       <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                       <div class="card-body text-center">
